Back : route game of user fonctionnel
